feat: migrate to cursor pagination
